Fixed several minor issues: line-height for canvas objects are slightly better (letters with tails, like "g", were cut off), clicking on canvas objects blurs inputs elsewhere, and droppable no longer sends an update message if position is unchanged.

--- a/public/canvas_style.css
+++ b/public/canvas_style.css
@@ -1,7 +1,7 @@
 
 
 .canvas_object { position: absolute; z-index: 2; display: block; padding: 1px; cursor: move; }
-.canvas_object .content { overflow: hidden; display: block; }
+.canvas_object .content { overflow: hidden; display: block; line-height: 120%; }
 
 
 /* this is a hack to get select tags to conform to explicitly-set height/width values */
